# timelapse-tool-cli

./: README.md  pyproject.toml
.github/workflows/: test.yml
src/: main.py  video.py
test/: test_video.py
